chore:TCDICORE-177 fix alignment for connected icons in the footer

--- a/ui/src/scss/themes/default/_fonts.scss
+++ b/ui/src/scss/themes/default/_fonts.scss
@@ -43,6 +43,7 @@ h6 {
 
 .has-standard-14-font-size {
   font-size: 14px;
+  margin: 1rem 0;
 }
 
 .has-standard-12-font-size {
